objects/ASI_CRM_Price_List__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_JP_Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Price_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Price_Lists1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Price_Lists2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Price_List_Description__c</fullName>
        <label>Price List Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <label>Price List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_JP_Effective_Date__c</columns>
        <columns>ASI_CRM_JP_Approved__c</columns>
        <columns>ASI_CRM_JP_Approved_Date__c</columns>
        <columns>ASI_CRM_JP_Price_List_Description__c</columns>
        <columns>ASI_CRM_JP_Remarks__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PL-{00000000}</displayFormat>
        <label>Price List Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>